# misora2_qr

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/misora2_qr/: cv_mat_type_adapter.hpp  detect.hpp  qr_component.hpp
src/: qr_component.cpp  qr_node.cpp  qr_reader.cpp  qr_reader_main.cpp
